--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -2,8 +2,9 @@
   //common colors
   --pc-c-primary-color: #ee26c2;
   --pc-c-accent-color: #2676ee;
-  --pc-c-secondary-color: #949494;
   --pc-c-elements-color: #f4d4ed;
+  --pc-c-gray: #949494;
+  --pc-c-light-gray: #cbcbcb;
 
   //backgrounds
   --pc-c-primary-background: #ffffff;
@@ -13,4 +14,5 @@
   //font colors
   --pc-c-primary-font-color: #000000;
   --pc-c-secondary-font-color: #525252;
+  --pc-c-elemens-font-color: #ffffff;
 }
