--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -4,6 +4,7 @@
   --pc-c-accent-color: #2676ee;
   --pc-c-elements-color: #f4d4ed;
   --pc-c-gray: #949494;
+  --pc-c-dark-gray: #b5b5b5;
   --pc-c-light-gray: #cbcbcb;
 
   //backgrounds
